Generalize output maps
Can now use any joint injective set of maps. Algorithm does not check that the maps are joint injective.

Documentation not yet updated.